--- a/app/auth/templates/base.html
+++ b/app/auth/templates/base.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> MakeYourPitchAuth </title>
     <!-- <link rel='icon' href='{{url_for('static', filename='images/logo.png')}}'> -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css')}}">
+    <!-- <link rel="stylesheet" href="{{ url_for('static', filename='styles.css')}}"> -->
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     {% block link %}{% endblock %}
 </head>
 <body>
     <header>
         <nav>
-            <div class="nav-logo">
+            <!-- <div class="nav-logo">
                 <a href="/home" class="nav-link">HOME</a>
             </div>
             <ul class="nav-items">
@@ -22,7 +22,7 @@
                 <li class="nav-item"><a href="#" class="nav-link"></a></li>
                 <li class="nav-item"><a href="#" class="nav-link"></a></li>
                 <li class="nav-item"><a href="#" class="nav-link"></a></li>
-            </ul>
+            </ul> -->
         </nav>
     </header>
     {% block content %}
