--- a/app/auth/templates/sign_up.html
+++ b/app/auth/templates/sign_up.html
@@ -1,9 +1,29 @@
 {% extends 'base.html' %}
 
-{% block link %}
-
-{% endblock %}
+{% block link %}{% endblock %}
 
 {% block content %}
 
+    {% if message %}
+        <p>{{ message }}</p>
+    {% endif %}
+
+    <form action="" method="POST">
+        <div class="form-group">
+            <label for="fname"></label>
+            <input class="form-control" id="fname" type="text" name="fname" placeholder="Firstname" >
+            <label for="lname"></label>
+            <input class="form-control" id="lname" type="text" name="lname" placeholder="Lastname">
+            <label for="email"></label>
+            <input class="form-control" id="email" type="email" name="email" placeholder="Email">
+            <label for="uname"></label>
+            <input class="form-control" id="uname" type="text" name="uname" placeholder="Username">
+            <label for="pass"></label>
+            <input class="form-control" id="pass" type="password" name="pass" placeholder="Password">
+            <label for="cpass"></label>
+            <input class="form-control" id="cpass" type="password" name="cpass" placeholder="Confirm Password">
+        </div>
+        <input type="submit" value="submit">
+    </form>
+    
 {% endblock %}
