--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,5 +12,8 @@
             <img class='home-img' src="../static/Images/about-hero.jpg" alt="Image">
         </div>   
     </main>
-    <h1>HOME</h1>
+    <div class="spacer layer1"></div>
+    <section class="categories">
+        
+    </section>
 {% endblock %}
