--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,13 +12,13 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="spacer">
             <div class="nav-logo">
                 <a href="{{url_for('view.home')}}" class="nav-link">Pitches App</a>
             </div>
             <ul class="nav-items">
                 {% if user.is_authenticated %}
-                <li class="nav-item"><a href="#" class="nav-link">Profile</a></li>
+                <li class="nav-item"><a href="{{url_for('auth.profile')}}" class="nav-link">{{user.username}}</a></li>
                 {% endif %}
             </ul>
             <ul class="nav-items">
