--- a/app/static/Styles/styles.css
+++ b/app/static/Styles/styles.css
@@ -53,5 +53,58 @@ nav{
 }
 
 .nav-link{
-    color: black;
+    color: white;
 }
+
+.categories-wrapper{
+    display: grid;
+    background-color: #002233;
+}
+
+.categories-wrapper > h1 {
+    justify-self: center;
+    color: white;
+}
+
+.categories{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    gap: 2rem;
+    padding: 2rem;
+}
+
+.cat-obj{
+    display: flex;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    border-radius: 6px;
+    padding: 1rem;
+    border: 0.5rem;
+    background: #ffffff;
+    height: 300px;
+    z-index: 5;
+}
+
+.cat-obj::after{
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 0.3rem;
+    top: 0;
+    background-color: magenta;
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
+}
+
+/* .cat-obj::before{
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 100%;
+    top: -6px;
+    right: -6px;
+    transform: translate(5%, -5%);
+    background-color: black;
+    z-index: 1;
+} */
