--- a/app/static/Styles/styles.css
+++ b/app/static/Styles/styles.css
@@ -68,7 +68,7 @@ nav{
 
 .categories{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 2rem;
     padding: 2rem;
 }
@@ -78,11 +78,12 @@ nav{
     position: relative;
     align-items: center;
     justify-content: center;
+    cursor:pointer;
     border-radius: 6px;
     padding: 1rem;
     border: 0.5rem;
     background: #ffffff;
-    height: 300px;
+    height: 150px;
     z-index: 5;
 }
 
@@ -92,19 +93,15 @@ nav{
     width: 100%;
     height: 0.3rem;
     top: 0;
-    background-color: magenta;
+    background-color: yellow;
     border-top-left-radius: 6px;
     border-top-right-radius: 6px;
 }
 
-/* .cat-obj::before{
-    position: absolute;
-    content: '';
-    width: 100%;
-    height: 100%;
-    top: -6px;
-    right: -6px;
-    transform: translate(5%, -5%);
+.cat-link{
     background-color: black;
-    z-index: 1;
-} */
+    color: white;
+    justify-self: center;
+    padding: 0.5rem 0.8rem;
+    margin-bottom: 1rem;
+}
