--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title> MakeYourPitch by LemmyMwaura </title>
     <!-- <link rel='icon' href='{{url_for('static', filename='images/logo.png')}}'> -->
     <link rel="stylesheet" href="{{ url_for('static', filename='Styles/styles.css')}}">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+    <script defer src="{{ url_for('static', filename='Javascript/app.js')}}"></script>
     {% block link %}{% endblock %}
 </head>
 <body>
