--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,6 +23,6 @@
             </div>
             {% endfor %}
         </div>
-        <a class="cat-link" href="{{url_for('view.posts')}}"> View Posts </a>
+        <a class="cat-link" href="{{url_for('post.posts')}}"> View Posts </a>
     </section>
 {% endblock %}
