--- a/app/static/Styles/home.css
+++ b/app/static/Styles/home.css
@@ -1,32 +1,34 @@
 main{
     padding-top: 4.5rem;
-}
-
-.container{
     display: grid;
     place-items: center;
 }
 
+.container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    place-items: center;
+    width: 80%;
+    height: calc(100vh - 4.5rem);
+}
+
 .home-title{
-    font-size: 3rem;
+    font-size: 3.2rem;
     text-transform: uppercase;
     font-weight: bold;
 }
 
-.home-desc{
-    font-size: 3rem;
-    text-transform: uppercase;
+.home-desc1,
+.home-desc2{
+    font-size: 1.5rem;
     font-weight: bold;
 }
 
 .home-img{
-    max-width: 60vw;
-}
-
-.spacer{
-    aspect-ratio: 960/300;   
-}
-
-.layer1{
-    background-image: url('./wave1_lemmy.svg');
+    aspect-ratio: 16/9;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-image: url('./Data.svg');
 }
