--- a/app/static/Styles/styles.css
+++ b/app/static/Styles/styles.css
@@ -1,7 +1,51 @@
-@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500&family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
 
 ::root{
-    --main_color: #002233;
+    --purple: hsl(250, 66%, 75%);
+    --blue:hsl(207,90%,72%);
+    --pink:hsl(356,66%,75%);
+    --Teal:hsl(174,63%,62%);
+    
+    --first-hue:250;
+    --sat:66%;
+    --lig:75%;
+    --second-hue:219;
+
+    --first-color:hsl(var(--first-hue), var(--sat), var(--lig))
+    --first-color-alt:hsl(var(--first-hue), var(--sat), 71%)
+    --title-color: var(--second-hue), 15%, 95%;
+    --text-color: var(--second-hue), 8%, 75%;
+    --text-color-light: var(--second-hue), 4%, 55%;
+    --body-color: var(--second-hue), 48%, 8%;
+    --container-color: var(--second-hue), 32%, 12%;
+
+    --body-font: 'Poppins', san-serif;
+    --biggest-font-size:1.75rem;
+    --h1-font-size:1.5rem;
+    --h2-font-size:1.25rem;
+    --h3-font-size:1rem;
+    --normal-font-size:.938rem;
+    --small-font-size: .813rem;
+    --smaller-font-size:.75rem;
+    --tiny-font-size:.625rem;
+
+    --font-medium: 500;
+    --font-semibold:600;
+
+    --z-tooltip:10;
+    --z-fixed:100;
+
+    @media screen and (min-width: 968px) {
+        :root{
+            --biggest-font-size: 2.5rem;
+            --h1-font-size: 2.25rem;
+            --h2-font-size:1.5rem;
+            --h3-font-size:1.25rem;
+            --normal-font-size:.1rem;
+            --small-font-size: .875rem;
+            --smaller-font-size:.813rem;
+        }
+    }
 }
 
 *,::after,::before{
@@ -10,37 +54,76 @@
     border: 0;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 a{
     text-decoration: none;
+}
+
+ul{
+    list-style: none;
 }
 
 li{
     list-style: none;
 }
 
+body,
+button,
+input,
+textarea{
+    font-family: 'Poppins', sans-serif;
+    font-size: var(--normal-font-size);
+}
+
 body{
-    font-family: 'Fredoka', sans-serif;
+    background-color: hsl(219, 48%, 8%);
+    color: hsl(219, 8%, 75%);
+}
+
+h1,h2,h3{
+    color: hsl(219, 15%, 95%);
+    font-weight:600;
+}
+
+button{
+    cursor: pointer;
+    border: none;
+    outline: none;
+}
+
+img{
+    max-width: 100%;
 }
 
 nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: hsl(0 0% 100% / 0.1);
-    height: 5rem;
-    background-image: url("./wave2_lemmy.svg");
-}
-
-.nav-logo, .nav-items{
-    margin-top: -1.3rem;
-}
-
-.spacer{
-    aspect-ratio: 960/70;
+    position: fixed;
+    z-index: 500;
+    transition: 200ms ease;
+    height: 4rem;
     width: 100%;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+}
+
+.nav-logo{
+    display: flex;
+    gap: 1.5rem;
+}
+
+.nav-logo > a, .nav-link, .dropdown-btn {
+    color:hsl(219, 15%, 95%);
+    font-weight: 500;
+    transition: .4s;
+}
+
+.nav-logo > a:hover,
+.nav-item > a:hover,
+.dropdown-btn:hover {
+    color: hsl(219, 8%, 75%);
 }
 
 .nav-items{
@@ -52,56 +135,31 @@ nav{
     padding: 0.2rem 0.8rem;
 }
 
-.nav-link{
-    color: white;
+.scroll-header{
+    border-bottom: 1px solid hsl(219, 15%, 95%);
 }
 
-.categories-wrapper{
-    display: grid;
-    background-color: #002233;
-}
-
-.categories-wrapper > h1 {
-    justify-self: center;
-    color: white;
-}
-
-.categories{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 2rem;
-    padding: 2rem;
-}
-
-.cat-obj{
-    display: flex;
+/* Dropdown */
+.dropdown{
     position: relative;
-    align-items: center;
-    justify-content: center;
-    cursor:pointer;
-    border-radius: 6px;
-    padding: 1rem;
-    border: 0.5rem;
-    background: #ffffff;
-    height: 150px;
-    z-index: 5;
 }
 
-.cat-obj::after{
+.dropdown-menu{
     position: absolute;
-    content: '';
-    width: 100%;
-    height: 0.3rem;
-    top: 0;
-    background-color: yellow;
-    border-top-left-radius: 6px;
-    border-top-right-radius: 6px;
+    left: 0;
+    top: calc(100% + .25rem);
+    background-color: white;
+    padding: .75rem;
+    border-radius: .25rem;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.1);
+    opacity: 0;
+    pointer-events: none;
+    transform: translateY(-10px);
+    transition: opacity 200ms ease-in-out, transform 200ms ease-in-out;
 }
 
-.cat-link{
-    background-color: black;
-    color: white;
-    justify-self: center;
-    padding: 0.5rem 0.8rem;
-    margin-bottom: 1rem;
+.dropdown.active > .dropdown-btn + .dropdown-menu{
+    opacity: 1;
+    transform: translateY(0);
+    pointer-events: auto;
 }
