--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,22 +7,13 @@
 {% block content %}
     <main>
         <div class="container home">
-            <h1 class="home-title">Stunning Ideas Made together</h1>
-            <p class="home-desc">Share your best thinking</p>
-            <img class='home-img' src="../static/Images/home.jpg" alt="Image">
+            <div class="info">
+                <p class="home-desc1">Stunning Ideas </p>
+                <h1 class="home-title">Share Your Pitch</h1>
+                <p class="home-desc2">Made together</p>
+            </div>
+            <div class="home-img">
+            </div>  
         </div>   
     </main>
-    <div class="spacer layer1">
-    </div>
-    <section class="categories-wrapper">
-        <h1>Categories</h1>
-        <div class="categories">
-            {% for category in categories %}
-            <div class="cat-obj">    
-                <h1 class="cat-title">{{ category.name }}</h1>
-            </div>
-            {% endfor %}
-        </div>
-        <a class="cat-link" href="{{url_for('post.posts')}}"> View Posts </a>
-    </section>
 {% endblock %}
