--- a/app/templates/posts.html
+++ b/app/templates/posts.html
@@ -11,33 +11,43 @@
             <div class="post-wrapper">
                 <h1 class="post-title">{{post.title}}</h1>
                 <div class="post-content">{{post.content}}</div>
-                <h2 class="post-author">{{ post.poster.username }}</h2>
-                <h2 class="post-email">{{ post.poster.email }}</h2>
+                <div class="post-name-wrapper">
+                    <i class='bx bxs-badge-check post-tooltip'></i>
+                    <h2 class="post-author">{{ post.poster.username }}</h2>
+                </div>
                 <div class="post-footer">
                     <p class="post-category">{{post.category.name}}</p>
-                    <p class="post-date_posted">{{post.date_posted}}</p>
+                    <div class="post-date">
+                        <p class="post-date_posted">{{post.date_posted.strftime('%H:%M') }}</p>
+                        <p class="post-date_posted">{{post.date_posted.strftime('%b %dth, %Y') }}</p>
+                    </div>
                 </div>
                 {% if user.id == post.poster_id %}
                 <div class="post-btn">
-                    <span id="likes-count-{{post.id}}"> {{ post.likes.all()|length }}</span>
-                    <i class='bx bx-like' id="like-button-{{post.id}}" onClick="like('{{post.id}}')"></i>
-                    <a class="btn" href="{{ url_for('post.delete_post',post_id=post.id) }}">Delete</a>
+                    <span class="post-btn-item" id="likes-count-{{post.id}}"> {{ post.likes.all()|length }}</span>
+                    <i class='bx bx-like post-btn-item' id="like-button-{{post.id}}" onClick="like('{{post.id}}')"></i>
+                    <a class="delete-btn-atag" href="{{ url_for('post.delete_post',post_id=post.id) }}"><i class='bx bx-trash post-btn-item'></i></a>
                 </div>
                 {% endif %}
-                {% for comment in post.comments %}
-                <div class="post-edit-comments">
-                    <p class="post-comment">{{ comment.text }}</p>
-                    {% if user.id == comment.poster_id or user.id == post.poster_id %}
-                    <div class="post-btn">
-                        <a class="btn" href="{{ url_for('post.delete_comment',comment_id=comment.id) }}">Delete</a>
+                <div class="dropdown dropdown-comments" data-dropdown>
+                    <a href="#" class="dropdown-comment-btn dropdown-btn" data-dropdown-button>view comments</a>
+                    <div class="post-edit-comments dropdown-menu">
+                        {% for comment in post.comments %}
+                        <div class="comment-item">
+                            <p class="post-comment">{{ comment.text }}</p>
+                            {% if user.id == comment.poster_id or user.id == post.poster_id %}
+                            <div class="comment-btn">
+                                <a class="comment-btn-item delete-btn-atag" href="{{ url_for('post.delete_comment',comment_id=comment.id) }}"><i class='bx bx-trash post-btn-item'></i></a>
+                            </div>
+                            {% endif %}
+                        </div>
+                        {% endfor %}
                     </div>
-                    {% endif %}
+                    <form action="/posts/create-comment/{{ post.id }}" method="POST" class="form-comment">
+                        <input type="text" id="text" name="text" class="form-control" placeholder="add a comment">
+                        <input type="submit" class="submit-btn" value="Add comment">
+                    </form>
                 </div>
-                {% endfor %}
-                <form action="/posts/create-comment/{{ post.id }}" method="POST" class="form-comment">
-                    <input type="text" id="text" name="text" class="form-control" placeholder="add a comment">
-                    <input type="submit" class="submit-btn" value="Add comment">
-                </form>
             </div>
             {% endfor%}
         </div>
