--- a/app/auth/templates/profile.html
+++ b/app/auth/templates/profile.html
@@ -15,7 +15,7 @@
             <div class="form-wrapper">
                 <div class="form-group">
                     <label for="title"></label>
-                    <input class="form-control" type="text" id="title" name="title" placeholder="Title">
+                    <input class="form-control profile-title" type="text" id="title" name="title" placeholder="Title">
                 </div>
                 <div class="radio-buttons form-group">
                     <input type="radio" name="category"  value="Buiness/Ecommerce" id="cat1">
