--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,9 +8,12 @@
     <main>
         <div class="container home">
             <div class="info">
-                <p class="home-desc1">Stunning Ideas </p>
-                <h1 class="home-title">Share Your Pitch</h1>
-                <p class="home-desc2">Made together</p>
+                <!-- <p class="home-desc1">Stunning Ideas </p> -->
+                <div class="titles">
+                    <h1 class="home-title">Share Your</h1>
+                    <h1 class="home-title large">Pitch</h1>
+                </div>
+                <p class="home-desc">Stunning Ideas Made together</p>
             </div>
             <div class="home-img">
             </div>  
