--- a/app/auth/templates/login.html
+++ b/app/auth/templates/login.html
@@ -1,18 +1,28 @@
 {% extends 'base.html' %}
 
-{% block link %}{% endblock %}
+{% block link %}
+<link rel="stylesheet" href="{{ url_for('static', filename='Styles/credentials.css')}}">
+{% endblock %}
 
 {% block content %}
+<div class="container">
     <form action="" method="POST">
-        <h3>LOGIN</h3>
+        <h1 class="form-title">LOGIN</h1>
         <div class="form-group">
-            <label for="email"></label>
-            <input class="form-control" type="email" id="email" name="email" placeholder="Enter Email">
-            <label for="username"></label>
-            <input class="form-control" type="text" id="username" name="username" placeholder="Enter Username">
-            <label for="password"></label>
-            <input class="form-control" type="password" id="password" name="password" placeholder="Enter Password">
+            <div class="form-wrapper">
+                <input class="form-control" type="email" id="email" name="email" placeholder=" ">
+                <label class="form-label" for="email">Email</label>
+            </div>
+            <div class="form-wrapper">
+                <input class="form-control" type="text" id="username" name="username" placeholder=" ">
+                <label class="form-label" for="username">Username</label>
+            </div>
+            <div class="form-wrapper">   
+                <input class="form-control" type="password" id="password" name="password" placeholder=" ">
+                <label class="form-label" for="password">Password</label>
+            </div>   
         </div>
         <input type="submit" class="btn submit-btn" value="Login">
     </form>
+</div>   
 {% endblock %}
