--- a/app/auth/templates/sign_up.html
+++ b/app/auth/templates/sign_up.html
@@ -1,29 +1,44 @@
 {% extends 'base.html' %}
 
-{% block link %}{% endblock %}
+{% block link %}
+<link rel="stylesheet" href="{{ url_for('static', filename='Styles/credentials.css')}}">
+{% endblock %}
 
 {% block content %}
 
-    {% if message %}
-        <p>{{ message }}</p>
-    {% endif %}
-
+<div class="container">
     <form action="" method="POST">
-        <div class="form-group">
-            <label for="fname"></label>
-            <input class="form-control" id="fname" type="text" name="fname" placeholder="Firstname" >
-            <label for="lname"></label>
-            <input class="form-control" id="lname" type="text" name="lname" placeholder="Lastname">
-            <label for="email"></label>
-            <input class="form-control" id="email" type="email" name="email" placeholder="Email">
-            <label for="uname"></label>
-            <input class="form-control" id="uname" type="text" name="uname" placeholder="Username">
-            <label for="pass"></label>
-            <input class="form-control" id="pass" type="password" name="pass" placeholder="Password">
-            <label for="cpass"></label>
-            <input class="form-control" id="cpass" type="password" name="cpass" placeholder="Confirm Password">
+        <h1 class="form-title">SIGN-UP</h1>
+        <div class="form-group"> 
+            <div class="names">
+                <div class="form-wrapper fit">
+                    <input class="form-control" id="fname" type="text" name="fname" placeholder=" ">
+                    <label class="form-label" for="fname">Firstname</label>
+                </div>
+                <div class="form-wrapper fit">
+                    <input class="form-control" id="lname" type="text" name="lname" placeholder=" ">
+                    <label class="form-label" for="lname">Lastname</label>
+                </div>
+            </div> 
+            <div class="form-wrapper">
+                <input class="form-control" id="email" type="email" name="email" placeholder=" ">
+                <label class="form-label" for="email">Email</label>
+            </div>
+            <div class="form-wrapper">
+                <input class="form-control" id="uname" type="text" name="uname" placeholder=" ">
+                <label class="form-label" for="uname">Username</label>
+            </div>
+            <div class="form-wrapper">
+                <input class="form-control" id="pass" type="password" name="pass" placeholder=" ">
+                <label class="form-label" for="pass">Password</label>
+            </div>
+            <div class="form-wrapper">
+                <input class="form-control" id="cpass" type="password" name="cpass" placeholder=" ">
+                <label class="form-label" for="cpass">Confirm Password</label>
+            </div>
         </div>
-        <input type="submit" value="submit">
+        <input type="submit" class="btn" value="submit">
     </form>
+</div>
     
 {% endblock %}
