--- a/app/static/Styles/posts.css
+++ b/app/static/Styles/posts.css
@@ -2,12 +2,20 @@ nav{
     top: 0;
 }
 
+main{
+   display: grid;
+   margin-top: 4.5rem;
+}
+
+main > h1{
+    justify-self: center;
+    text-decoration: underline;
+}
 .posts{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     gap: 1rem;
     padding: 1rem;
-    margin-top: 4.5rem;
 }
 
 .post-wrapper{
@@ -69,6 +77,8 @@ nav{
 .post-edit-comments{
     display: grid;
     gap: 0.8rem;
+    width: 95%;
+    height: auto;
 }
 
 .comment-item{
@@ -107,8 +117,6 @@ nav{
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.1);
     opacity: 0;
     pointer-events: none;
-    width: 95%;
-    height: auto;
     transform: translateY(-10px);
     z-index: 100;
     transition: opacity 200ms ease-in-out, transform 200ms ease-in-out;
