--- a/app/static/Styles/styles.css
+++ b/app/static/Styles/styles.css
@@ -107,6 +107,43 @@ nav{
     transition: 200ms ease;
     height: 4rem;
     width: 100%;
+    padding-left: 0.4rem;
+}
+
+.signup{
+    border: 2px solid hsl(219, 15%, 95%);
+    border-bottom: 5px solid hsl(219, 15%, 95%);
+    background-color: hsl(250, 66%, 75%);
+    color: hsl(219, 48%, 8%);
+    padding: 0.2rem 0.3rem;
+    border-radius: 0.2rem;
+}
+
+.nav-link{
+    text-transform: uppercase;
+}
+
+.user-nav{
+    display: flex;
+    align-items: center;
+    gap: 0.3rem;
+}
+
+.main-logo{
+    display: flex;
+    align-items: center;
+    gap: 0.3rem;
+}
+
+.main-tooltip{
+    display: grid;
+    place-items: center;
+    background: linear-gradient(180deg,
+                hsla(250,66%, 75%,1),
+                hsla(250,66%,75%,.2)
+    );
+    border-radius: 50%;
+    padding: 0.3rem;
 }
 
 .nav-logo{
@@ -136,7 +173,8 @@ nav{
 }
 
 .scroll-header{
-    border-bottom: 1px solid hsl(219, 15%, 95%);
+    border-bottom: 1px solid black;
+    background-color: hsl(219, 32%, 12%);;
 }
 
 /* Dropdown */
@@ -148,14 +186,29 @@ nav{
     position: absolute;
     left: 0;
     top: calc(100% + .25rem);
-    background-color: white;
+    background-color: hsl(223, 44%, 11%);
+    color: hsl(219, 15%, 95%);
     padding: .75rem;
     border-radius: .25rem;
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.1);
     opacity: 0;
     pointer-events: none;
     transform: translateY(-10px);
+    z-index: 100;
     transition: opacity 200ms ease-in-out, transform 200ms ease-in-out;
+}
+
+.drop-menu-styles{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: auto;
+}
+
+.drop-item{
+    padding: 0.2rem 0.4rem;
+    border-radius: 0.2rem;
+    background-color: hsl(219, 48%, 8%);
 }
 
 .dropdown.active > .dropdown-btn + .dropdown-menu{
@@ -163,3 +216,43 @@ nav{
     transform: translateY(0);
     pointer-events: auto;
 }
+
+.btn{
+    cursor: pointer;
+}
+
+.btn:active{
+    transform: scale(0.9);
+}
+
+
+/* chrome + safari custom scrollbar */
+::-webkit-scrollbar {
+    width: 8px;
+    cursor: pointer;
+    height: 1em;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background: hsl(219, 48%, 6%);
+    margin-block: 0.2em;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: hsl(219, 8%, 75%);
+    backdrop-filter: blur(30px);
+    cursor: pointer;
+  }
+  
+  ::-webkit-scrollbar-thumb::hover {
+    background: hsl(219, 32%, 12%);
+  }
+  
+  /* firefox custom scrollbar */
+  @supports (scrollbar-color: hsl(219, 8%, 75%) hsl(219, 48%, 6%)) {
+    * {
+      scrollbar-color: #c6d1f1 #040c18;
+      scrollbar-width: thin;
+    }
+  }
+  
