--- a/app/templates/posts.html
+++ b/app/templates/posts.html
@@ -6,6 +6,7 @@
 
 {% block content %}
     <main>
+        <h1>{{ title }}</h1>
         <div class="container posts">
             {% for post in posts %}
             <div class="post-wrapper">
@@ -37,7 +38,7 @@
                             <p class="post-comment">{{ comment.text }}</p>
                             {% if user.id == comment.poster_id or user.id == post.poster_id %}
                             <div class="comment-btn">
-                                <a class="comment-btn-item delete-btn-atag" href="{{ url_for('post.delete_comment',comment_id=comment.id) }}"><i class='bx bx-trash post-btn-item'></i></a>
+                                <a class="comment-btn-item btn delete-btn-atag" href="{{ url_for('post.delete_comment',comment_id=comment.id) }}"><i class='bx bx-trash post-btn-item'></i></a>
                             </div>
                             {% endif %}
                         </div>
