--- a/app/static/Styles/styles.css
+++ b/app/static/Styles/styles.css
@@ -226,6 +226,43 @@ nav{
     transform: scale(0.9);
 }
 
+.flash-message.modal{
+    display: grid;
+    gap: 0.8rem;
+    color: hsl(219, 15%, 95%);
+    position: fixed;
+    padding: 0.5rem 0.5rem;
+    top: 50%;
+    left: 50%;
+    min-width: 10rem;
+    text-align: center;
+    transform: translate(-50%, -50%);
+    z-index: 5000;
+    transition: 200ms ease-in-out;
+}
+
+.success{
+    background-color: rgba(45, 185, 45, 0.719);
+}
+
+.danger{
+    background-color: rgba(235, 38, 38, 0.836);
+}
+
+.inactive{
+    opacity: 0;
+}
+
+.modal-btn{
+    background-color: hsl(250, 66%, 75%);
+    color: hsl(219, 48%, 8%);
+    padding: 0.3rem;
+    font-weight: 500;
+    outline: none;
+    border: none;
+    font-size: 1.25rem;
+    font-weight: bold;
+}
 
 /* chrome + safari custom scrollbar */
 ::-webkit-scrollbar {
