Project refactor + error handling

--- a/app/auth/templates/profile.html
+++ b/app/auth/templates/profile.html
@@ -15,10 +15,10 @@
             <div class="form-wrapper">
                 <div class="form-group">
                     <label for="title"></label>
-                    <input class="form-control profile-title" type="text" id="title" name="title" placeholder="Title">
+                    <input class="form-control profile-title" required type="text" id="title" name="title" placeholder="Title">
                 </div>
                 <div class="radio-buttons form-group">
-                    <input type="radio" name="category"  value="Buiness/Ecommerce" id="cat1">
+                    <input type="radio" required name="category"  value="Buiness/Ecommerce" id="cat1">
                     <label for="cat1">Buiness/Ecommerce</label>
                     <input type="radio" name="category" value="Tech" id="cat2">
                     <label for="cat2">Tech</label>
@@ -34,7 +34,7 @@
     
                 <div class="form-group">
                     <label for="content"></label>
-                    <textarea class="form-control" name="content" id="content" cols="20" rows="7" placeholder="Lets hear your Pitch"></textarea>  
+                    <textarea class="form-control" required name="content" id="content" cols="20" rows="7" placeholder="Lets hear your Pitch"></textarea>  
                 </div>
             </div>
             <input type="submit" class="btn submit-btn" value="Post">
