--- a/app/static/Styles/posts.css
+++ b/app/static/Styles/posts.css
@@ -47,6 +47,7 @@ main > h1{
     align-items: center;
     justify-content: space-around;
     column-gap: 0.5rem;
+    cursor: pointer;
 }
 
 .delete-btn-atag{
